--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-justify-content: center;
+    -webkit-align-items: center;
 }
 
 .clock span{
